--- a/index.html
+++ b/index.html
@@ -1,55 +1,120 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>G-3 Archiyers</title>
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400&display=swap"
+      rel="stylesheet"
+    />
 
-    <link rel="stylesheet" href="styel.css/styel.css">
-</head>
-<body>
-<header>
-    <nav>
-        <h3 class="nav-titel">G-3 Archiyers</h3>
+    <link rel="stylesheet" href="styel.css/styel.css" />
+  </head>
+  <body>
+    <header>
+      <nav>
+        <h3 class="section-titel">G-3 Archiyers</h3>
         <ul>
-            <li><a href="">Home</a></li>
-            <li><a href="">About</a></li>
-            <li><a href="">Contact</a></li>
-            <li><a href="">Login</a></li>
+          <li><a href="">Home</a></li>
+          <li><a href="">About</a></li>
+          <li><a href="">Contact</a></li>
+          <li><a href="">Login</a></li>
         </ul>
-    </nav>
-<div class="baner">
-    <div class="baner-content">
-        <h1 class="baner-titel">Band new group of Archiyers</h1>
-        <p class="text-light-gray">Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus, voluptas magnam, saepe consequuntur ut dignissimos doloremque reprehenderit, minus dolore esse quos cumque! Corporis voluptas tempora suscipit cumque voluptate laudantium quas?</p>
-        <button class="praymary-btn">Explore More</button>
-    </div>
-    <img src="images/banner.png" alt="">
-</div>
-</header>
+      </nav>
+      <div class="baner">
+        <div class="baner-content">
+          <h1 class="baner-titel">Band new group of Archiyers</h1>
+          <p class="text-light-gray">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus,
+            voluptas magnam, saepe consequuntur ut dignissimos doloremque
+            reprehenderit, minus dolore esse quos cumque! Corporis voluptas
+            tempora suscipit cumque voluptate laudantium quas?
+          </p>
+          <button class="praymary-btn">Explore More</button>
+        </div>
+        <img src="images/banner.png" alt="" />
+      </div>
+    </header>
     <main>
-        <section class="contenar">
-            <div class="team-img-contenar">
-                <img src="images/team1.png" alt="">
-                <img src="images/team2.png" alt="">
-                <img src="images/team3.png" alt="">
-                <img src="images/team4.png" alt="">
-            </div>
-            <div class="teams-contint">
-                <h3 class="teams-titel"> <span class="quick-list">Quick list</span><span class="off"> of our</span> <span class="text-features">features</span></h3>
-                <p class="text-light-gray">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit pariatur vitae magnam ex suscipit optio, perferendis architecto. Ratione dignissimos, nobis quas animi, qui maiores facilis minus quidem sed quod repudiandae.</p>
-                <button class="praymary-btn">Explore More</button>
+      <section class="contenar">
+        <div class="team-img-contenar">
+          <img src="images/team1.png" alt="" />
+          <img src="images/team2.png" alt="" />
+          <img src="images/team3.png" alt="" />
+          <img src="images/team4.png" alt="" />
+        </div>
+        <div class="teams-contint">
+          <h3 class="teams-titel">
+            <span class="quick-list">Quick list</span
+            ><span class="off"> of our</span>
+            <span class="text-features">features</span>
+          </h3>
+          <p class="text-light-gray">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Reprehenderit pariatur vitae magnam ex suscipit optio, perferendis
+            architecto. Ratione dignissimos, nobis quas animi, qui maiores
+            facilis minus quidem sed quod repudiandae.
+          </p>
+          <button class="praymary-btn">Explore More</button>
+        </div>
+      </section>
+      <section class="features">
+        <div class="features-content">
 
-            </div>
-        </section>
+        </div>
 
+        <div class="feacture-img"></div>
+
+      </section>
+      <section class="facts">
+        <h3 class="section-titel">Some facts</h3>
+        <p class="text-light-gray">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates ea
+          accusamus nemo accusantium dolores. Obcaecati sint pariatur quasi cum
+          iste quod quas vel perspiciatis corrupti quo a, quisquam maiores in.
+        </p>
+
+        <div class="facts-crad-container">
+          <div class="crad">
+            <img src="images/icons/ribon.png" alt="" />
+            <h2 class="crad-stats">54</h2>
+            <p class="crad-title">Awards winnings</p>
+          </div>
+          <div class="crad">
+            <img src="images/icons/projects.png" alt="" />
+            <h2 class="crad-stats">1458</h2>
+            <p class="crad-title">projects finished</p>
+          </div>
+          <div class="crad">
+            <img src="images/icons/customers.png" alt="" />
+            <h2 class="crad-stats">590</h2>
+            <p class="crad-title">Cliend wirked</p>
+          </div>
+          <div class="crad">
+            <img src="images/icons/email.png" alt="" />
+            <h2 class="crad-stats">225708</h2>
+            <p class="crad-title">Email Send</p>
+          </div>
+        </div>
+      </section>
+      <section class="Sponsors">
+        <div class="section-titel">Our Sponsors</div>
+        <p class="text-light-gray">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestiae voluptates repudiandae ex, assumenda inventore vero.</p>
+        <div class="sponsore-img-container">
+            <img src="images/sponsors/spotify.png" alt="">
+            <img src="images/sponsors/amazon.png" alt="">
+            <img src="images/sponsors/google.png" alt="">
+            <img src="images/sponsors/telerama.png" alt="">
+            <img src="images/sponsors/figma.png" alt="">
+        </div>
+      </section>
     </main>
     <footer>
-
+         
     </footer>
-</body>
+  </body>
 </html>
