compelet image section

--- a/index.html
+++ b/index.html
@@ -64,10 +64,35 @@
       </section>
       <section class="features">
         <div class="features-content">
+            <h3 class="section-titel">Feature you Will</h3>
+            <p class="text-light-gray">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Culpa maiores eum consequatur deleniti repudiandae quis, at tempore commodi magnam vitae cupiditate harum velit sed, ad veritatis assumenda quia, minus possimus.</p>
+
+            <div class="crad">
+              <h4> Dastop And mobil varson</h4>
+              <p  class="text-light-gray">Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita illo adipisci non fugit officiis temporibus, consequuntur illum dolore delectus iste praesentium consequatur quaerat molestias sed! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Expedita, minima ipsa. Consectetur, eos! At id veritatis architecto amet maiores. Sint et minima fugiat saepe maiores ea ipsum ad enim quidem.</p>
+            </div>
+            <div class="crad">
+              <h4> Dastop And mobil varson</h4>
+              <p  class="text-light-gray">Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita illo adipisci non fugit officiis temporibus, consequuntur illum dolore delectus iste praesentium consequatur quaerat molestias sed! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Expedita, minima ipsa. Consectetur, eos! At id veritatis architecto amet maiores. Sint et minima fugiat saepe maiores ea ipsum ad enim quidem.</p>
+            </div>
+            <div class="crad">
+              <h4> Dastop And mobil varson</h4>
+              <p  class="text-light-gray">Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita illo adipisci non fugit officiis temporibus, consequuntur illum dolore delectus iste praesentium consequatur quaerat molestias sed! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Expedita, minima ipsa. Consectetur, eos! At id veritatis architecto amet maiores. Sint et minima fugiat saepe maiores ea ipsum ad enim quidem.</p>
+            </div>
+            <div class="crad">
+              <h4> Dastop And mobil varson</h4>
+              <p  class="text-light-gray">Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita illo adipisci non fugit officiis temporibus, consequuntur illum dolore delectus iste praesentium consequatur quaerat molestias sed! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Expedita, minima ipsa. Consectetur, eos! At id veritatis architecto amet maiores. Sint et minima fugiat saepe maiores ea ipsum ad enim quidem.</p>
+            </div>
 
         </div>
 
-        <div class="feacture-img"></div>
+        <div class="feacture-img">
+            <img src="images/architect.png" alt="">
+            <div class="ten-year-badge">
+              <h2>10+Year</h2>
+              <p>Exprenes</p>
+            </div>
+        </div>
 
       </section>
       <section class="facts">
